# solosis

./: .gitignore  .nextflow.log.1  .nextflow.log.2  .pre-commit-config.yaml  CITATION.cff  README.md  deploy-solosis.sh  pyproject.toml  setup.py  solosis-cli  test.csv
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-sphinx.yml  deploy-sphinx.yml  precommit.yml  tests-python.yml
.nextflow/: history
.pap/: hist
.solosis/lsf/: e27336c4-b5fd-495f-aff2-5d6a9071e6eb.lsf
docs/: .buildinfo  api.html  citations.html  citing.html  commands.html  configuration.html  development.html  examples.html  genindex.html  index.html  input.html  installation.html  modules.html  objects.inv  output.html  py-modindex.html  run.html  search.html  searchindex.js  setup.html  testing.html  visualise.html
docs/_sources/: citations.rst.txt  commands.rst.txt  configuration.rst.txt  development.rst.txt  index.rst.txt  modules.rst.txt  output.rst.txt  run.rst.txt  setup.rst.txt
envs/: dev-requirements.txt  doc-requirements.txt  environment.yaml  environment.yml  requirements.txt
envs/dev/: requirements.txt
examples/: README.md  command.py  command.sh  irods_download.txt
metadata/: metadata.tsv
modulefiles/solosis/: .version  0.1.0  0.2.1  0.2.3  0.3.0  0.4.0  0.4.1  0.4.2  0.5.0
notebooks/: qc_basic1.py  qc_merge.py  rna__merge.ipynb  sc_base1.ipynb
scrna/scanpy/: submit.sh
solosis/: cli.py  utils.py
solosis/commands/: irods.py  (+2 more)
sphinx/: README.md  api.rst  citing.rst  commands.rst  conf.py  configuration.rst  development.rst  examples.rst  index.rst  input.rst  installation.rst  modules.rst  output.rst  run.rst  setup.rst  testing.rst  visualise.rst
tests/: test_cli.py
(+80 files in other folders)
