[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solosis"
version = "0.3.0"
description = "A Python CLI app using click"
requires-python = ">=3.10"
dependencies = [
    "click",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "pip-tools",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-mock",
]
doc = [
    "Sphinx",
    "sphinx-rtd-theme",
    "sphinx-click",
]

[project.scripts]
solosis = "solosis.cli:cli"