[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solosis"
version = "0.5.0"
description = "A command line interface for working with single-cell data"
requires-python = ">=3.10"
dependencies = [
    "click",
    "tabulate",
    "pandas",
]

[project.optional-dependencies]
dev = [
    "black",
    "colorama",
    "isort",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-mock"
]
doc = [
    "Sphinx",
    "sphinx-rtd-theme",
    "sphinx-click",
]

[project.scripts]
solosis = "solosis.cli:cli"